@@ -1,6 +1,10 @@
+---
+ src/plugins/clangtools/clangtidyclazyrunner.cpp |    1 +
+ 1 file changed, 1 insertion(+)
+
 --- a/src/plugins/clangtools/clangtidyclazyrunner.cpp
 +++ b/src/plugins/clangtools/clangtidyclazyrunner.cpp
-@@ -92,6 +92,7 @@
+@@ -93,6 +93,7 @@ QStringList ClangTidyClazyRunner::constr
  
      const QString clazyChecks = m_diagnosticConfig.clazyChecks();
      if (!clazyChecks.isEmpty()) {
